tests/inter/fail/illegal-029.dcf
bool x = 14;

void main() {}